package main.interfaces;

public interface Expirable {
    boolean isExpired();
}
