package main.interfaces;

public interface Shippable {
    String getName();
    double getWeight();
}
