package main.models.core;

public class Cart {
}
