package main.models.core;

public class CartItem {
}
