package main.models.core;

public class Customer {
}
